shift the fixed box to the right

--- a/blocbox/static/blocbox/css/jb_bootstrap_customization.css
+++ b/blocbox/static/blocbox/css/jb_bootstrap_customization.css
@@ -125,7 +125,7 @@ h6 {font-size: 1.286em; font-weight: 400; }
     display: block;
     position: fixed;
     top: 15px;
-    left: 1.95%;
+    left: 2%;
     z-index: 100000;
     width: 10.0833%;
     height: 94px;
